fix cut off of text in project page title

--- a/my-app/src/styles/projectsPage.module.css
+++ b/my-app/src/styles/projectsPage.module.css
@@ -17,7 +17,7 @@
 .summary {
   width: 85%;
   max-width: 85%;
-  text-align: justify;
+  text-align: left;
 }
 
 [data-theme="dark"] .summary {
